[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Paul Gowder <paul.gowder@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.6.0"
requests = "^2.25.1"
jedi = "^0.18.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
